@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised August 20, 2014
+Last revised August 22, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.3 ==
@@ -7,6 +7,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 
 = Code =
 * Added `post-title-link` wrapper class to better manage Post Title output
+* Added WordPress HTML5 markup support
 
 = CSS =
 * Added new typography styles for better reading
